# gatekeeper

./: CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: device.rs
src/components/: update-checker.tsx
src/components/auth/: EntrepreneurAuthForm.tsx
src/components/kiosk/: CheckedInView.tsx  CheckinDialog.tsx  CheckoutDialog.tsx  DeviceInfo.tsx  Header.tsx  KioskContainer.tsx  StaffGridView.tsx  checked-in-view.tsx  checkin-dialog.tsx  checkout-dialog.tsx  device-info.tsx  header-section.tsx  staff-card.tsx  staff-grid-view.tsx  workstation-dialog.tsx
src/components/logo/: Logo.tsx  LogoAnimated.tsx  LogoWithGradient.tsx
src/components/register-device/: DeviceRegistration.tsx
src/components/topbar/: TitleBar.tsx  title-bar.tsx
src/components/ui/: dropdown-menu.tsx
src/hooks/: useAuthInit.ts
src/lib/: api.ts  auth.ts  device.ts
src/routes/: index.tsx  kiosk.tsx  register-device.tsx
src/types/: action.type.ts  device.type.ts  user.type.ts
