[package]
name = "Gatekeeper"
version = "0.1.7"
description = "Kiosk to check in and out of xerweon, for staffs."
authors = ["Nabiel Ahammed"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = { version = "2.0.0", features = [ "windows7-compat" ] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version="1.44", features = ["full"] }
tauri-plugin-store = "2"
sysinfo = "0.35.2"
tauri-plugin-dialog = "2"
get_if_addrs = "0.5"
tauri-plugin-http = "2.5.2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"

# [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
[dependencies.uuid]
version = "1.17.0"
features = ["v4"]
